# ipmi-fan-control

./: .azure-pipelines.yml  .gitignore  Cargo.toml  README.md  build.rs  config.sample.toml  wrapper.h
.github/workflows/: ci.yml  release.yml
src/: bindings.rs  compat.rs  config.rs  error.rs  freeipmi.rs  ipmi.rs  main.rs  source.rs
