[package]
name = "ipmi-fan-control"
description = "SuperMicro IPMI fan control daemon"
repository = "https://github.com/chenxiaolong/ipmi-fan-control"
readme = "README.md"
license = "GPL-3.0-or-later"
version = "0.3.10"
authors = ["Andrew Gunnerson <andrewgunnerson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
futures = "0.3.24"
log = "0.4.17"
once_cell = "1.14.0"
retry = "2.0.0"
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio-stream = "0.1.10"
toml = "0.5.9"

[dependencies.clap]
version = "3.2.22"
features = ["derive"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dependencies.tokio]
version = "1.21.1"
features = ["full"]

[build-dependencies]
bindgen = "0.60.1"
pkg-config = "0.3.25"
